@@ -38,6 +38,10 @@
 <p>2015-01-18  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/dpx.c (WriteRowSamples): Ensure that callback function is
+always defined. Resolves Coverity CID 10122.
+(ReadRowSamples): Ensure that callback function is always
+defined. Resolves Coverity CID 10125.</li>
 <li>magick/random.c (InitializeMagickRandomKernel): Avoid possible
 double-close of file.  Resolves Coverity CID 10257.</li>
 <li>coders/histogram.c (WriteHISTOGRAMImage): Avoid possible divide
